--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -25,7 +25,7 @@
             </span>
         </div>
         <div class="col-lg-12 set-margin-submit">
-          <button type="submit" class="form-control">Login</button>
+          <button type="submit" class="form-control" (click)="onSubmit()">Login</button>
         </div>
       </div>
     </div>
