--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,3 +1,8 @@
-<app-dashboard *ngIf="userType == 'student'"></app-dashboard>
+<!-- <app-dashboard *ngIf="userType == 'student'"></app-dashboard>
 
-<app-admin-dashboard *ngIf="userType == 'admin'"></app-admin-dashboard>
+<app-admin-dashboard *ngIf="userType == 'admin'"></app-admin-dashboard> -->
+
+<!-- <ngx-sample-layout> -->
+    <!-- <nb-menu [items]="menu"></nb-menu> -->
+    <router-outlet></router-outlet>
+<!-- </ngx-sample-layout> -->
