--- a/src/app/pages/new-attestation/new-attestation.component.html
+++ b/src/app/pages/new-attestation/new-attestation.component.html
@@ -1,91 +1,94 @@
-<div class="card">
-  <h3 class="card-header">Educational Details</h3>
-  <div class="card-body">
-    <div class="row">
-      <div class="col-md-1">
-        <mat-vertical-stepper headerPosition="bottom" #stepper>
-          <mat-step>
-            <ng-template matStepLabel>Applied</ng-template>
+<mat-card >
+        <div>
+        <mat-stepper   orientation="horizontal" #stepper>
+          <mat-step >
+            <ng-template matStepLabel>1st Steps</ng-template> 
+            <div class="card">
+              <h3 class="card-header" style="font-weight: bold;background: #06d8f8;">Educational Details</h3>
+              <div class="card-body"> 
+                <div class="step"> 
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Educational Details (select this option for attestation of marksheets, transcripts & Convocation
+                        Certificate)
+                      </mat-checkbox>
+                      </span>
+                  </section>
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Medium of Instruction (In case you want letter(language) of medium of instructions eg: English,Hindi etc)
+                      </mat-checkbox>
+                    </span>
+                  </section>
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Curriculum (Incase you want the subjects to be attested. Curriculum is issued by the college)
+                      </mat-checkbox>
+                    </span>
+                  </section>
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Grade to Percentage Letter
+                      </mat-checkbox>
+                    </span>
+                  </section>
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Affiliation Letter
+                      </mat-checkbox>
+                    </span>
+                  </section>
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Certificate of Competency letter (For Master of Foreign-Going Ship Examination ONLY)
+                      </mat-checkbox>
+                    </span>
+                  </section>
+                  <section class="example-section">
+                    <span class="example-list-section">
+                      <mat-checkbox class="example-margin">
+                        Letter For Name Change (A Letter stating mothers name on marksheet and not on passport.)
+                      </mat-checkbox>
+                    </span>
+                  </section>
+                  <br>
+                  <button mat-button matStepperNext class="next-custom-button">Next</button>
+              </div>
+                <div class="help">
+                  <br/>
+                  <br/>
+                  <span style="color :red; font-size: 20px;">Need Help in Attestation Process?</span><br/>
+                  <span style="color:red; text-align:center;">Click Here</span><br/>
+                  <br/>
+                  <a href=" " target="_blank"><img src=" " width="150px;" height="100px;"></a>
+                </div>
+              </div> 
+            </div>   
           </mat-step>
           <mat-step>
-            <ng-template matStepLabel>Verified</ng-template>
+            <ng-template matStepLabel>2nd Steps
+            </ng-template> 
+            <app-upload-document></app-upload-document>
+           <br>
+            <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
+            <button mat-button matStepperNext class="next-custom-button">Next</button>
           </mat-step>
           <mat-step>
-            <ng-template matStepLabel>Signed</ng-template>
+            <ng-template matStepLabel>3rd Steps</ng-template>
+            
+            <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
+            <button mat-button matStepperNext class="next-custom-button">Next</button>
           </mat-step>
           <mat-step>
-            <ng-template matStepLabel>Sent<br /> to<br />recipient</ng-template>
-          </mat-step>
-          <mat-step>
-            <ng-template matStepLabel>Sent<br /> to<br />WES</ng-template>
-          </mat-step>
-        </mat-vertical-stepper>
+            <ng-template matStepLabel>4th Steps</ng-template>
+            <button mat-button matStepperPrevious class="previous-custom-button">Back</button>
+          </mat-step> 
+        </mat-stepper>
       </div>
-      <div class="col-md-11">
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Educational Details (select this option for attestation of marksheets, transcripts & Convocation
-              Certificate)
-            </mat-checkbox>
-          </span>
-        </section>
-
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Medium of Instruction (In case you want letter(language) of medium of instructions eg: English,Hindi etc)
-            </mat-checkbox>
-          </span>
-        </section>
-
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Curriculum (Incase you want the subjects to be attested. Curriculum is issued by the college)
-            </mat-checkbox>
-          </span>
-        </section>
-
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Grade to Percentage Letter
-            </mat-checkbox>
-          </span>
-        </section>
-
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Affiliation Letter
-            </mat-checkbox>
-          </span>
-        </section>
-
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Certificate of Competency letter (For Master of Foreign-Going Ship Examination ONLY)
-            </mat-checkbox>
-          </span>
-        </section>
-
-        <section class="example-section">
-          <span class="example-list-section">
-            <mat-checkbox class="example-margin">
-              Letter For Name Change (A Letter stating mothers name on marksheet and not on passport.)
-            </mat-checkbox>
-          </span>
-        </section>
-        <br>
-        <section>
-          <div class="example-button-row">
-            <button mat-raised-button color="primary">PREV</button>
-            <button mat-raised-button color="primary">NEXT</button>
-          </div>
-        </section>
-      </div>
-    </div>
-  </div>
-</div>
+    </mat-card>     
