--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,3 +1,7 @@
-<!-- <app-navbar></app-navbar> -->
+<div class="body">  
+    <app-navbar></app-navbar>
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
-<app-body [collapsed]="isSideNavCollapsed" [screenWidth]="screenWidth"></app-body>
+<app-body [collapsed]="isSideNavCollapsed" [screenWidth]="screenWidth"></app-body> 
+
+<app-footer ></app-footer>
+</div>
