--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css"; 
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+
 * {
     margin: 0;
     padding: 0;
@@ -10,4 +16,7 @@
 body {
     position: relative;
     font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
