PP-FEAT-Purpose and admin side changes

--- a/src/app/pages/sidenav/sidenav.component.css
+++ b/src/app/pages/sidenav/sidenav.component.css
@@ -105,6 +105,12 @@
     color: #000;
 } */
 
+.navbar{
+    /* position: fixed; */
+    width: 100%;
+    top: 0;
+}
+
 .nav-link{
     color: #fff;
 }
