--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,27 +7,67 @@
         </div>
         <div class="col-lg-12 set-margin">
           <input type="text" id="userName" class="form-control" formControlName="userName" placeholder="Enter Username">
-          <span class="text-danger" >
-             Username is required
+          <span class="text-danger">
+            Username is required
           </span>
-          <span class="text-danger" >
-             Enter a valid email address
+          <span class="text-danger">
+            Enter a valid email address
           </span>
         </div>
         <div class="col-lg-12 set-margin">
-          <input type="password" id="passWord" class="form-control" formControlName="passWord" placeholder="Enter Password">
-            <span class="text-danger" >
-              Password is required
-            </span>
-            <span class="text-danger" >
-              Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase
-              letter and 1 number
-            </span>
+          <input type="password" id="passWord" class="form-control" formControlName="passWord"
+            placeholder="Enter Password">
+          <span class="text-danger">
+            Password is required
+          </span>
+          <span class="text-danger">
+            Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase
+            letter and 1 number
+          </span>
         </div>
         <div class="col-lg-12 set-margin-submit">
           <button type="submit" class="form-control" (click)="onSubmit()">Login</button>
+        </div>
+        <div>
+          <p-dialog header="Verify OTP" [(visible)]="visible" [style]="{width: '50vw'}">
+            <div>
+              <div class="card text-center">
+                <!-- <div class="card-header" style="font-weight: bold; background-color: rgb(174, 152, 176) !important;">
+                  <h1 style="font-weight: bold;">Verify OTP</h1>
+                </div> -->
+                <form [formGroup]="otpForm">
+                  <div class="card-body">
+                    <h2 class="card-title">Enter Your OTP</h2>
+                    <div class="row box">
+                      <div class="col-xs-1">
+                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
+                          formControlName="otp1Value">
+                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
+                          formControlName="otp2Value">
+                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
+                          formControlName="otp3Value">
+                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
+                          formControlName="otp4Value">
+                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
+                          formControlName="otp5Value">
+                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
+                          formControlName="otp6Value">
+                      </div>
+                    </div>
+                    <br>
+                  </div>
+                  <div class="card-footer">
+                    <p-button label="Cancel" (click)="cancel()"></p-button>
+                    <p-button label="Verify" (click)="verify()"></p-button>
+                    <p-button label="Resend OTP" (click)="resendOtp()"></p-button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </p-dialog>
         </div>
       </div>
     </div>
   </form>
 </div>
+<p-toast></p-toast>
